feat: improve translation queue UI and fix concurrency issues
- Add priority queue support with reenqueue endpoints
- Add remove media functionality for failed/queued/in-progress items
- Fix DbUpdateConcurrencyException in SubtitleExtractionService
- Fix test file structure in AutomatedTranslationJobTests
- Update frontend translation request handling

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -124,7 +124,8 @@
     "close": "Close",
     "noActiveTranslations": "No translations currently in progress.",
     "noFailedTranslations": "No failed translations.",
-    "noQueuedTranslations": "No translations in queue."
+    "noQueuedTranslations": "No translations in queue.",
+    "reenqueueQueue": "Re-enqueue queue"
   },
   "schedule": {
     "jobName": "Job Name",
