feat: add Radarr/Sonarr connection testing and multiple bug fixes
## New Features

### Integration Connection Testing
- Add new API endpoints for testing Radarr/Sonarr connections
  - POST /api/setting/test/radarr - Tests Radarr connectivity
  - POST /api/setting/test/sonarr - Tests Sonarr connectivity
- Add IntegrationTestResult model to represent connection test outcomes
- Extend IIntegrationService interface with TestConnection method
- Add connection test button to IntegrationSettings.vue with status display
  - Shows connected/failed state with version info
  - Automatic status reset when settings change
- Add i18n translations for connection testing UI

## Bug Fixes

### Statistics Double-Counting Fix
- Fix TranslationsByMediaType to count unique media items instead of translation operations
- Dynamically calculate translated movies/episodes from distinct completed requests
- Prevents inflation of statistics when media is re-translated

### Translation Priority Queue Fix
- Force manually triggered translations to always use priority queue
- Add forcePriority parameter to CreateRequest and ProcessMediaForceAsync
- All manual translation triggers now correctly use translation-priority queue

### Translation Pagination Fix
- Filter GetTranslationRequests to only include Pending status
- Ensures pagination count matches visible pending items

## Technical Changes

### Backend (C#)
- Lingarr.Server/Services/StatisticsService.cs - Dynamic unique media counting
- Lingarr.Server/Services/Integration/IntegrationService.cs - Connection testing
- Lingarr.Server/Controllers/SettingController.cs - Test endpoints
- Lingarr.Server/Controllers/TranslateController.cs - Priority queue routing
- Lingarr.Server/Services/MediaSubtitleProcessor.cs - forcePriority propagation
- Lingarr.Server/Services/TranslationRequestService.cs - Pending status filter
- Lingarr.Server/Models/IntegrationTestResult.cs - New model class

### Frontend (Vue/TypeScript)
- IntegrationSettings.vue - Conne

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -179,7 +179,13 @@
       "sonarrAddressError": "Please enter a valid URL (e.g., http://localhost:3000 or https://api.example.com)",
       "sonarrApiKey": "API key",
       "sonarrApiKeyError": "API Key must be {minLength} characters",
-      "reindexTask": "No media visible? Try reindexing by starting a sync task <a href=\"/settings/tasks\" class=\"underline\">here</a>"
+      "reindexTask": "No media visible? Try reindexing by starting a sync task <a href=\"/settings/tasks\" class=\"underline\">here</a>",
+      "testConnection": "Test Connection",
+      "testing": "Testing...",
+      "connectionSuccess": "Connected",
+      "connectionFailed": "Connection failed",
+      "notTested": "Not tested",
+      "version": "Version"
     },
     "services": {
       "title": "Services",
