feat: add manual integrity check for movies and episodes
This commit introduces UI and backend support for manually triggering
subtitle integrity checks on individual media items.

Backend Changes:
- Add IMediaSubtitleProcessor.ProcessMediaWithCount() to return the
  number of translation requests queued (for UI feedback)
- Add IMediaService.PerformIntegrityCheck() that forces re-validation
  of existing subtitles using forceProcess=true, forceTranslation=false
- Add MediaController.IntegrityCheck endpoint (POST /api/media/integrity-check)
- Refactor ProcessSubtitlesWithCount() to accept media/mediaType as
  parameters instead of using instance fields (cleaner internal API)
- Fix TryQueueEmbeddedSubtitleTranslation() to properly pass through
  the forceTranslation flag for consistent behavior
- Update MediaServiceTests.cs to include the new IMediaSubtitleProcessor
  dependency in the MediaService constructor

Frontend Changes:
- Add integrity check button to MoviePage.vue with grid column adjustment (12->13)
- Add integrity check button to EpisodeTable.vue with grid column adjustment
- Add integrityCheck() method to mediaService.ts
- Add 'services.integrityCheck' to services.ts enum
- Add 'embedded.title' label to ContextMenu.vue for embedded subtitle section

Translations:
- Add 'embedded.justExtract' translation key (en.json, nl.json)

The integrity check validates existing translated subtitles against
their source using line count comparison and re-queues translations
for any that are found to be corrupt.

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -16,6 +16,7 @@
   "embedded": {
     "title": "Embedded Subtitles",
     "extract": "Extract",
+    "justExtract": "Just Extract",
     "extracting": "Extracting...",
     "textBased": "Text-based",
     "imageBased": "Image-based subtitle (PGS/VobSub). Cannot be extracted without OCR.",
