--- a/Lingarr.Server/Statics/Translations/nl.json
+++ b/Lingarr.Server/Statics/Translations/nl.json
@@ -16,6 +16,7 @@
   "embedded": {
     "title": "Ingebedde Ondertitels",
     "extract": "Uitpakken",
+    "justExtract": "Alleen uitpakken",
     "extracting": "Bezig met uitpakken...",
     "textBased": "Tekstgebaseerd",
     "imageBased": "Afbeeldingsondertitel (PGS/VobSub). Kan niet worden uitgepakt zonder OCR.",
