fix: use full media path for embedded subtitle extraction validation
Fixed bug in MediaSubtitleProcessor.ProcessSubtitles where only the directory
path (_media.Path) was passed to ExtractSubtitle instead of the full file path.
The method expects Path.Combine(_media.Path, _media.FileName) to locate the
media file for subtitle extraction.

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -76,6 +76,7 @@
     "hours": "hours",
     "priority": "Prioritize",
     "translateNow": "Translate",
+    "integrityCheck": "Integrity Check",
     "translationQueued": "{count} translation(s) queued",
     "noTranslationsNeeded": "No translations needed"
   },
