--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -94,6 +94,7 @@
     "hours": "hours",
     "priority": "Prioritize",
     "translateNow": "Translate",
+    "integrityCheck": "Integrity Check",
     "translationQueued": "{count} translation(s) queued",
     "noTranslationsNeeded": "No translations needed"
   },
