feat: add deferred repair mode for batch translation failures
- Add DeferredRepairService with smart context merging algorithm
- Collect all failures during batch processing, repair at end
- Include surrounding context lines for better LLM translation
- Replace batch fallback toggle with mode selector dropdown
- Add settings: batch_retry_mode, repair_context_radius, repair_max_retries
- Progress bar: 0-95% for batches, 95-100% for repair phase
- Default: deferred mode with 10 lines context, 1 retry

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -267,7 +267,15 @@
       "enableBatchFallback": "Retry failed batches:",
       "enableBatchFallbackDescription": "When a batch translation fails, automatically retry with smaller chunks before failing the entire file.",
       "maxBatchSplitAttempts": "Batch split levels:",
-      "maxBatchSplitAttemptsDescription": "If a batch is too large, split it into smaller chunks. Level 1 = full batch, 2 = halves, 3 = thirds."
+      "maxBatchSplitAttemptsDescription": "If a batch is too large, split it into smaller chunks. Level 1 = full batch, 2 = halves, 3 = thirds.",
+      "batchRetryMode": "Batch retry mode:",
+      "batchRetryModeDescription": "Choose how to handle failed translations within a batch.",
+      "batchRetryModeDeferred": "Deferred Repair (recommended)",
+      "batchRetryModeImmediate": "Immediate Split (legacy)",
+      "repairContextRadius": "Context radius:",
+      "repairContextRadiusDescription": "Number of surrounding lines to include with each failed line for better translation quality (deferred mode only).",
+      "repairMaxRetries": "Repair retries:",
+      "repairMaxRetriesDescription": "How many times to retry the repair batch if it fails (deferred mode only)."
     },
     "subtitle": {
       "title": "Subtitle",
