--- a/Lingarr.Server/Statics/Translations/nl.json
+++ b/Lingarr.Server/Statics/Translations/nl.json
@@ -439,10 +439,14 @@
     "pending": "In afwachting",
     "stale": "Verouderd",
     "unknown": "Onbekend",
+    "notApplicable": "N.v.t.",
+    "noSuitableSubtitles": "Geen bron",
     "tooltipComplete": "Alle vertalingen voltooid",
     "tooltipInProgress": "Vertaling bezig",
     "tooltipPending": "Wacht op vertaling",
     "tooltipStale": "Heranalyse nodig",
-    "tooltipUnknown": "Nog niet geanalyseerd"
+    "tooltipUnknown": "Nog niet geanalyseerd",
+    "tooltipNotApplicable": "Niet van toepassing / Geen bron",
+    "tooltipNoSuitableSubtitles": "Geen geschikte ondertitelsporen gevonden (allemaal dun/Signs & Songs)"
   }
 }
