feat: add batch context wrapper support for translation services
- Add batch_context_enabled, batch_context_before, batch_context_after settings
- Update IBatchTranslationService interface with preContext/postContext params
- Implement BuildBatchUserContent helper in OpenAI, Anthropic, Gemini services
- Update all translation job orchestration to build and pass context
- Add frontend toggle and inputs in PromptSettings.vue
- Add English and Dutch translations for batch context settings
- Update tests for new interface signature

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -391,6 +391,10 @@
           "description": "Subtitle line to translate"
         }
       },
+      "batchContextToggle": "Enable batch context:",
+      "batchContextDescription": "Include surrounding subtitle lines as context wrapper when sending batches to the AI. This helps the AI understand the narrative flow for more accurate translations.",
+      "batchContextBefore": "Lines of context before the batch:",
+      "batchContextAfter": "Lines of context after the batch:",
       "notSupported": "Context prompt is not supported and has been disabled when sending subtitles in batch."
     },
     "logs": {
