--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -299,6 +299,8 @@
       "cleanSourceAssDrawings": "Also clean source files:",
       "cleanSourceAssDrawingsDescription": "Additionally remove drawing commands from the original source subtitle file.",
       "subtitleTag": "Subtitle tag",
+      "subtitleTagShort": "Short Subtitle Tag",
+      "subtitleTagShortDescription": "A shorter tag to use if the filename with the main tag is too long (e.g. \"-ai-\"). This helps preserve media server association when the file path hits system limits.",
       "subtitleIntegrityValidationEnabled": "Validate Subtitle Integrity",
       "subtitleIntegrityValidationEnabledDescription": "Check if the translated subtitle has roughly the same number of lines as the original to detect partial translations."
     },
