feat: add automatic cleanup of orphaned AI-translated subtitles
When Sonarr/Radarr upgrades media files (finding better quality), the filename
often changes, leaving orphaned AI-translated subtitles on disk. This feature
adds optional automatic cleanup of these orphaned files.

Implementation:
- Add 'cleanup_orphaned_subtitles' setting (disabled by default)
- Create SubtitleCleanupLog entity for audit trail
- Implement OrphanSubtitleCleanupService with tag-based detection
- Integrate cleanup into MovieSync and EpisodeSync on file changes
- Add toggle and warning UI to SubtitleSettings page

Safety measures:
- Disabled by default - users must opt-in
- Requires subtitle tagging to be enabled to identify Lingarr-created files
- Shows warning if cleanup enabled but tagging disabled
- All deletions logged to database for audit

Files changed:
- Backend: SettingKeys, StartupService, LingarrDbContext, Sync services
- Frontend: setting.ts, SubtitleSettings.vue, en.json
- Migrations: SQLite and PostgreSQL for SubtitleCleanupLog entity

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -301,6 +301,9 @@
       "subtitleTag": "Subtitle tag",
       "subtitleTagShort": "Short Subtitle Tag",
       "subtitleTagShortDescription": "A shorter tag to use if the filename with the main tag is too long (e.g. \"-ai-\"). This helps preserve media server association when the file path hits system limits.",
+      "cleanupOrphanedSubtitles": "Cleanup Orphaned Subtitles",
+      "cleanupOrphanedSubtitlesDescription": "Automatically delete AI-translated subtitles when media files are upgraded and the filename changes. Only removes files with your configured subtitle tag.",
+      "cleanupRequiresTagging": "Subtitle tagging must be enabled for automatic cleanup to identify Lingarr-created files.",
       "subtitleIntegrityValidationEnabled": "Validate Subtitle Integrity",
       "subtitleIntegrityValidationEnabledDescription": "Check if the translated subtitle has roughly the same number of lines as the original to detect partial translations."
     },
