--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -448,12 +448,14 @@
     "unknown": "Unknown",
     "notApplicable": "N/A",
     "noSuitableSubtitles": "No Source",
+    "failed": "Failed",
     "tooltipComplete": "All translations complete",
     "tooltipInProgress": "Translation in progress",
     "tooltipPending": "Awaiting translation",
     "tooltipStale": "Needs re-analysis",
     "tooltipUnknown": "Not yet analyzed",
     "tooltipNotApplicable": "Not applicable / No source",
-    "tooltipNoSuitableSubtitles": "No suitable subtitle tracks found (all are sparse/Signs & Songs)"
+    "tooltipNoSuitableSubtitles": "No suitable subtitle tracks found (all are sparse/Signs & Songs)",
+    "tooltipFailed": "Translation failed. Needs manual retry."
   }
 }
