feat: Add subtitle discovery for externally-added subtitles
- Add AwaitingSource state to distinguish 'waiting for subtitle' from 'excluded'

- Add LastSubtitleCheckAt property for mtime-based change detection

- Update MediaStateService to return AwaitingSource when no source exists

- Add mtime optimization to MovieSync/EpisodeSync to reduce I/O

- Add frontend support (TypeScript constant, Vue component, translations)

- Create EF migrations for SQLite and PostgreSQL

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -449,6 +449,7 @@
     "notApplicable": "N/A",
     "noSuitableSubtitles": "No Source",
     "failed": "Failed",
+    "awaitingSource": "Awaiting Source",
     "tooltipComplete": "All translations complete",
     "tooltipInProgress": "Translation in progress",
     "tooltipPending": "Awaiting translation",
@@ -456,6 +457,7 @@
     "tooltipUnknown": "Not yet analyzed",
     "tooltipNotApplicable": "Not applicable / No source",
     "tooltipNoSuitableSubtitles": "No suitable subtitle tracks found (all are sparse/Signs & Songs)",
-    "tooltipFailed": "Translation failed. Needs manual retry."
+    "tooltipFailed": "Translation failed. Needs manual retry.",
+    "tooltipAwaitingSource": "Waiting for source subtitle to appear"
   }
 }
