fix(logs): refactor log streaming to use event-driven channel + heartbeat
- Replace polling-based log stream with Channel<T> event-driven stream in LogsController
- Add 15s heartbeat to prevent proxy timeouts
- Fix 'logs stop appearing' issue by removing fixed buffer dependency in stream
- Add search functionality to LogsPage.vue
- Remove expensive TransitionGroup for log list performance
- Update translations (en/nl) for new UI elements

--- a/Lingarr.Server/Statics/Translations/en.json
+++ b/Lingarr.Server/Statics/Translations/en.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "navigation": {
     "dashboard": "Dashboard",
     "movies": "Movies",
@@ -35,6 +35,7 @@
     "searchMedia": "Search Media",
     "searchPlaceholder": "Search by movie, show, or episode...",
     "searchHelp": "Start typing a movie, show, or episode name and pick a subtitle below to fill in the path automatically.",
+    "searchDescription": "Search for media in your library to automatically find subtitle files.",
     "searchResultsTitle": "Search Results",
     "noSearchResults": "No media with subtitles matched your search.",
     "selectedFromSearch": "Using subtitle from",
@@ -50,7 +51,11 @@
     "success": "Translation Successful",
     "failed": "Translation Failed",
     "translated": "Translated",
-    "duration": "Duration"
+    "duration": "Duration",
+    "preview": "Preview",
+    "original": "Original",
+    "downloadOriginal": "Original",
+    "downloadTranslated": "Translated"
   },
   "statistics": {
     "notAvailable": "No statistics available",
@@ -413,12 +418,16 @@
       "enableAutoScroll": "Enable Auto-scroll",
       "clear": "Clear",
       "time": "Time",
-      "level": "Level",
-      "source": "Source",
-      "message": "Message",
-      "waitingForLogs": "Waiting for logs...",
-      "totalEntries": "Total entries",
-      "autoScroll": "Auto-scroll",
+    "level": "Level",
+    "source": "Source",
+    "message": "Message",
+    "waitingForLogs": "Waiting for logs...",
+    "totalEntries": "Total entries",
+    "maxLogs": "Max Logs",
+    "searchPlaceholder": "Search logs...",
+    "pause": "Pause",
+    "resume": "Resume",
+    "autoScroll": "Auto-scroll",
       "enabled": "Enabled",
       "disabled": "Disabled"
     },
